--- a/README
+++ b/README
@@ -1,7 +1,8 @@
 Yet Another CakePhp 2.x Blog Plugin
 
 Steps:
-1. Import Blog/Config/Schema/posts.sql file to cake db
+1. Import posts.sql, tags.sql, & posts_tags.sql from Blog/Config/Schema/ file
+    into cake db
 
 2. Add the following line to your app/Config/bootstrap.php
     CakePlugin::load('Blog', array('routes' => true));
@@ -9,8 +10,8 @@ Steps:
         it never loads the routes correctly
 
 Notes:
-* All admin routes go through /admin/posts or /admin/posts/:action. If a different
-    route config is needed add it to Blog/Config/routes.php
+* All admin routes go through /admin/(posts|tags) or /admin/(posts|tags)/:action.
+    If a different route config is needed add it to Blog/Config/routes.php
 
 Helpful links:
 http://book.cakephp.org/2.0/en/plugins.html
